# PQP_signed

./: CMakeLists.txt  README.adoc
Model3D/: BaseModel.cpp  BaseModel.h  Point3D.cpp  Point3D.h  RichModel.cpp  RichModel.h
PQP/: Distance_OBB.cpp  Distance_OBB.h  Distance_OBB.hpp  main.cpp  matrix_operations.cpp  matrix_operations.h  pqp.txt
cmake/: FindCGAL.cmake  FindEigen3.cmake  FindLIBIGL.cmake
mc/: MarchingCubes.cpp  MarchingCubes.h  mpVector.cpp  mpVector.h
